global script and new gen

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,4 +1,4 @@
-[res://Scripts/CharacterBody3D.gd]
+[res://Scripts/PlayerMovement.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -7,7 +7,21 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 18,
-"scroll_position": 4.0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/SaveFile.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
