--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,15 +19,15 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/SaveFile.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Asset Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Savefile.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Models/", "res://Models/T1Gen/", "res://Asset Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/test_scene.tscn", "res://Asset Scenes/player.tscn", "res://Asset Scenes/DontUseT1Gen.tscn", "res://Asset Scenes/T1Gen.tscn")
+open_scenes=PackedStringArray("res://Scenes/test_scene.tscn")
 center_split_offset=-234
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/PlayerMovement.gd", "res://Scripts/SaveFile.gd"]
-selected_script="res://Scripts/PlayerMovement.gd"
+open_scripts=["res://Scripts/PlayerMovement.gd", "res://Scripts/Savefile.gd"]
+selected_script="res://Scripts/Savefile.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
