--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -11,7 +11,7 @@ run_reload_scripts=true
 
 Node3D:scale=true
 CharacterBody3D:scale=true
-CollisionShape3D:scale=true
+CollisionShape3D:scale=false
 MeshInstance3D:scale=true
 Camera3D:scale=true
 StaticBody3D:scale=true
@@ -19,6 +19,7 @@ StandardMaterial3D:uv1_scale=true
 StandardMaterial3D:uv2_scale=true
 MultiNodeEdit:scale=true
 OmniLight3D:scale=true
+Area3D:scale=false
 
 [dialog_bounds]
 
