--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Savefile.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Models/", "res://Models/T1Gen/", "res://Asset Scenes/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Models/", "res://Models/T1Gen/", "res://Asset Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/test_scene.tscn")
+open_scenes=PackedStringArray("res://Scenes/test_scene.tscn", "res://Asset Scenes/player.tscn")
 center_split_offset=-234
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
-current_scene="res://Scenes/test_scene.tscn"
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+current_scene="res://Asset Scenes/player.tscn"
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/PlayerMovement.gd", "res://Scripts/Savefile.gd"]
-selected_script="res://Scripts/Savefile.gd"
+open_scripts=["res://Asset Scenes/player.gd", "res://Scripts/PlayerMovement.gd", "res://Scripts/Savefile.gd"]
+selected_script="res://Asset Scenes/player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
