--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -31,7 +31,7 @@ open_scenes=PackedStringArray("res://Scenes/test_scene.tscn", "res://Asset Scene
 center_split_offset=-234
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://Asset Scenes/player.tscn"
+current_scene="res://Scenes/test_scene.tscn"
 selected_bottom_panel_item=1
 
 [ScriptEditor]
