--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,38 +3,24 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 53,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 37,
-"scroll_position": 16.0,
+"row": 26,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Savefile.gd]
+[res://Scripts/SaveFile.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Asset Scenes/player.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 14,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
